5.3-service-mesh/istio/book-store/book-store-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: book-store-service
spec:
  selector:
    app: book-store
  ports:
    - protocol: TCP
      port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-store
      version: v1
  template:
    metadata:
      labels:
        app: book-store
        version: v1
    spec:
      containers:
        - name: book-store
          image: romanowalex/book-store:v1.2
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
