5.3-service-mesh/istio/book-store/book-store-circuit-breaker.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: store-service-circuit-breaker-dr
spec:
  host: book-store-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 10
      baseEjectionTime: 20s
