5.3-service-mesh/istio/book-store/book-store-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: book-store-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "book-store.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-store-vs
spec:
  hosts:
    - "book-store.local"
  gateways:
    - book-store-gw
  http:
    - route:
        - destination:
            host: book-store-service
            port:
              number: 8080
