5.3-service-mesh/istio/book-store/book-store-weight-release.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: book-store-dr
spec:
  host: book-store-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-store-vs
spec:
  hosts:
    - "book-store.local"
  gateways:
    - book-store-gw
  http:
    - name: Api v2 routing
      route:
        - destination:
            host: book-store-service
            port:
              number: 8080
            subset: v1
          weight: 50
        - destination:
            host: book-store-service
            port:
              number: 8080
            subset: v2
          weight: 50
